fix overflow intergers

--- a/style.css
+++ b/style.css
@@ -27,26 +27,33 @@ html, body {
     background-color: rgb(155, 155, 155);
     border-radius: 5px;
     border: 5px black solid;
-    width: 700px;
-    height: 800px;
+    width: 30%;
+    height: 55%;
+    padding: 36px;
 }
 
 .display {
     background-color: azure;
-    width: 580px;
+    width: 83%;
     height: 140px;
-    margin: 36px 0;
+    margin: 0 0 36px 0;
     border-radius: 3px;
     padding: 12px 4px;
     font-size: 100px;
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     display: flex;
     justify-content: end;
+    max-width: 90%;
+    overflow:hidden; /* Add this property to handle overflow content */
+    white-space: nowrap; /* Add this property to prevent text from wrapping */
+    border: 1px solid #ccc; /* Optional: Add a border for better visualization */
+    transition: font-size 0.3s ease;
 }
 
 
 .buttons {
     display: flex;
+    flex: 1;
 }
 
 
@@ -59,7 +66,7 @@ html, body {
 .operators {
     display: flex;
     flex-direction: column;
-    margin-left: 16px;
+    margin-left: 24px;
     height: 506px;
     justify-content: space-between;
 }
@@ -89,4 +96,5 @@ button:hover {
     background-color: grey;
     border: 2px solid black;
 }
+
 
